// If we did not define the syntax, it would take the syntax as proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes are gonna be stored
package com.students_information.stubs.result;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

// This is the request message
message ResultRequest{
  string student_id = 1;
}

// This is the response message
message ResultResponse{
  string student_id = 1;
  Grade maths = 2;
  Grade art = 3;
  Grade chemistry = 4;
}

// Students grades are given either as PASS or FAIL.
enum Grade{
  PASS = 0;
  FAIL = 1;
}

// Now let's define our service
service ResultService{
  rpc getResultForStudent(ResultRequest) returns (ResultResponse);
}
